--- a/journal/201906.md
+++ b/journal/201906.md
@@ -160,33 +160,29 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-Progress continues to be made on outreach, with a big focus on education and making it easier to learn about Decred. There is concrete work being done to establish a social media playbook that will enable every community member to contribute. Checkmate has emerged on Twitter, introducing the #decredchallenge hashtag and challenging everyone to study Decred for 30 days and explain why Decred shouldn't be #2 on Coinmarketcap.com. Results have been very positive, and Decred social media activity and effectiveness have picked up significantly. It's very important to like and comment on Decred stories, as that increases the reach and enables more stories to be written.
+Progress continues to be made on outreach, with a big focus on education and making it easier to learn about Decred. There is concrete work being done to establish a social media playbook that will enable every community member to contribute. [Checkmate](https://twitter.com/_Checkmatey_) has emerged on Twitter, introducing the [#DecredChallenge](https://twitter.com/hashtag/DecredChallenge) hashtag and [challenging](https://twitter.com/_Checkmatey_/status/1145764832362319872) everyone to study Decred for 30 days and explain why Decred shouldn't be #2 by market cap. Results have been very positive, and Decred social media activity and effectiveness have picked up significantly. It's very important to like and comment on Decred stories, as that increases the reach and enables more stories to be written.
 
 Building on education, website work is coming close to production, with a new introductory video and new subpages on Secure, Adaptable, Self-Funding, History, and a general repository on education. This work will help support community growth by making it easier to understand Decred.
 
-Anshawblack released Decred in Depth podcast episodes featuring Luke Powell and Joel Monegro, and Dustorf and jy-p recorded Decred Assembly episodes, including Decred Distributed with Akin Sawyerr featuring Decred in Africa, Deep Dive with Marco Peereboom on the Treasury Proposal, and Decred Distributed with Richard Red. The latter two episodes will be released shortly.
+@anshawblack released Decred in Depth podcast episodes featuring Luke Powell and Joel Monegro. @Dustorf and @jy-p recorded Decred Assembly episodes, including Decred Distributed with Akin Sawyerr featuring Decred in Africa, Deep Dive with Marco Peereboom on the Treasury proposal, and Decred Distributed with @richardred. The latter two episodes will be released shortly.
 
-Various events are being planned across the world, including Germany, Japan, China, and Toronto. The project has funding for a major event in Europe and Asia in 2019, and has not yet made a specific commitment, so please share in #Events_Planning if you have specific ideas. We rely on the community across the world to help identify and execute opportunities. 
+Various events are being planned across the world, including Germany, Japan, China and Canada. The project has funding for a major event in Europe and Asia in 2019, and has not yet made a specific commitment. Please share in #event\_planning if you have specific ideas. We rely on the community across the world to help identify and execute opportunities.
 
-Decred has made significant progress on the issue of governance. The staking byline in Coindesk is a precursor to the Decred governance manifesto, and Akin Sawyerr spoke at the Wharton Governance conference alongside leading speakers in the field. There was much discussion of Decred and it was widely respected as a pioneer and leader in governance. Decred has been invited to speak at the next such conference in Japan.
+Decred has made significant progress on the issue of governance. The staking byline in CoinDesk is a precursor to the Decred governance manifesto, and Akin Sawyerr spoke at the Wharton Governance conference alongside leading speakers in the field. There was much discussion of Decred and it was widely respected as a pioneer and leader in governance. Decred has been invited to speak at the next such conference in Japan.
 
 Ditto's June achievements:
 
 * Facilitated an introductory interview on governance and staking between Jake and CoinDesk 
 * Facilitated an interview with Legacy Research analyst Greg Wilson and Marco, who gave an overview and update of Decred, geared towards an investor audience. 
-* Secured and staffed “[Off the Chain](https://podcasts.apple.com/us/podcast/jake-yocom-piatt-project-lead-for-decred-crypto-ego/id1434060078?i=1000441486954 )” podcast with Anthony Pompliano, Founder of Morgan Creek Digital, and Jake. 
-* Secured and staffed “[Chain Reaction](https://youtu.be/kO_11gehyls )” podcast with Tom Shaughnessy, Delphi Digital, and Jake. 
-* Submitted [Ditto Communications Proposal: Phase 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04) to Politeia, participated in discussion and then saw the proposal approved by the Decred stakeholders! Thank you for your vote of confidence. It’s an absolute joy working on Decred, and we look forward to the next 6 months. 
-* Off the Chain podcast with Jake
-* Got Decred [quoted]( https://www.cnbc.com/2019/06/18/facebooks-libra-will-give-billions-access-to-cryptocurrency.html ) in CNBC on Libra
-* Got Decred [quoted](https://mashable.com/article/facebook-libra-experts/) in Mashable on Libra. Side note: CNBC and Mashable are mainstream media reaching people who know little about crypto. By getting Decred in front of them, we’re significantly expanding its reach. 
-* Got Decred [quoted](https://www.forbes.com/sites/kenrapoza/2019/06/20/facebooks-libra-coin-is-both-vampire-project-and-regulatory-nightmare/#425f36a11067) on Libra in Forbes - [twice](https://www.forbes.com/sites/rachelwolfson/2019/06/19/facebooks-cryptocurrency-libra-validates-blockchain-but-industry-experts-voice-concerns/#15e18c7672f4)! 
-* Got Decred [quoted](https://cointelegraph.com/news/what-is-libra-breaking-down-facebooks-new-digital-currency) on Libra in Cointelegraph
-* Got Jake [quoted](https://www.coindesk.com/how-blockchain-voting-is-supposed-to-work-but-in-practice-rarely-does) on governance in CoinDesk
-* Got Richard [quoted](https://cointelegraph.com/news/internet-authority-history-of-centralized-companies-being-hostile-toward-crypto) in a Cointelegraph article about CCN’s “shutdown” 
-* Attended SF Bitcoin meetup, where the organizers expressed interest in organizing a governance panel with Decred as a speaker. 
-* Created a social media [guide](https://github.com/xaur/decred-pr/blob/release/engagement-guide-delist.md) on how to react (or not) to geofencing or delisting. 
+* Secured and staffed [Off the Chain](https://podcasts.apple.com/us/podcast/jake-yocom-piatt-project-lead-for-decred-crypto-ego/id1434060078?i=1000441486954) podcast with Anthony Pompliano, founder of Morgan Creek Digital, and Jake.
+* Secured and staffed [Chain Reaction](https://www.youtube.com/watch?v=kO_11gehyls) podcast with Tom Shaughnessy of Delphi Digital, and Jake. 
+* Got Decred quoted on Facebook Libra in [CNBC](https://www.cnbc.com/2019/06/18/facebooks-libra-will-give-billions-access-to-cryptocurrency.html), [Mashable](https://mashable.com/article/facebook-libra-experts/), [CoinTelegraph](https://cointelegraph.com/news/what-is-libra-breaking-down-facebooks-new-digital-currency) and [Forbes](https://www.forbes.com/sites/kenrapoza/2019/06/20/facebooks-libra-coin-is-both-vampire-project-and-regulatory-nightmare/) ([twice](https://www.forbes.com/sites/rachelwolfson/2019/06/19/facebooks-cryptocurrency-libra-validates-blockchain-but-industry-experts-voice-concerns/)!). Side note: CNBC and Mashable are mainstream media reaching people who know little about crypto. By getting Decred in front of them, we're significantly expanding its reach.
+* Got Jake [quoted](https://www.coindesk.com/how-blockchain-voting-is-supposed-to-work-but-in-practice-rarely-does) on governance in CoinDesk.
+* Got Richard [quoted](https://cointelegraph.com/news/internet-authority-history-of-centralized-companies-being-hostile-toward-crypto) in a CoinTelegraph article about CCN's "shutdown".
+* Attended San Francisco Bitcoin meetup, where the organizers expressed interest in organizing a governance panel with Decred as a speaker. 
+* Created a social media [guide](https://github.com/decredcommunity/pr/blob/release/engagement-guide-delist.md) on how to react (or not) to geofencing or delisting. 
 * Rallied the community to engage and share media coverage on social media.
+* Submitted [Ditto Communications Proposal: Phase 2](https://proposals.decred.org/proposals/52ea110ea061c72d3b31ed2f5635720b212ce5e3eaddf868d60f53a3d18b8c04) to Politeia, participated in discussion and then saw the proposal approved by the Decred stakeholders! Thank you for your vote of confidence. It's an absolute joy working on Decred, and we look forward to the next 6 months. 
 
 ## Events
 
