Added dcrdata summary, wordsmithing

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -45,9 +45,9 @@ In progress:
 * [LN wallet](https://github.com/decred/decrediton/pull/2107) integration. {is there any more we can say here? Expected release date (roughly)? Will this trigger another version bump (1.5.0?)}
 * PoC to use a finite [state machine](https://github.com/decred/decrediton/pull/2130) to better manage complexity and improve correctness during startup.
 
-[Politeia] A [plugin](https://github.com/decred/politeia/pull/929) structure has been added to the Politeia user database that makes building generic applications on top of Politeia’s web server (politeiawww) easier. This will allow applications to more easily store application-specific user data (such as data from the Contractor Management System (CMS)), while still re-using the main user routes. A generic dcrdata websocket [implementation](https://github.com/decred/politeia/pull/933) has also been created, making it easier for applications building on politeiawww to monitor addresses balances and other blockchain data. 
+[Politeia](https://github.com/decred/politeia): A [plugin](https://github.com/decred/politeia/pull/929) structure has been added to the Politeia user database that makes building generic applications on top of Politeia’s web server (politeiawww) easier. This will allow applications to more easily store application-specific user data (such as data from the Contractor Management System (CMS)), while still re-using the main user routes. A generic dcrdata websocket [implementation](https://github.com/decred/politeia/pull/933) has also been created, making it easier for applications building on politeiawww to monitor addresses balances and other blockchain data. 
 
-A number of incremental improvements and bug fixes related to the CMS— an application running politeiawww and reusing much of Politeia’s frontend. CMS has been in production processing contractor invoices since early May. Friction in the process of submitting invoices has been significantly reduced. 
+A number of incremental improvements and bug fixes related to the CMS, an application running politeiawww that reuses much of Politeia’s frontend. The CMS has been in production processing contractor invoices since early May. Friction in the process of submitting invoices has been significantly reduced. 
 
 A full Politeia redesign to clean up the UI and make it consistent with Decred branding is [underway](https://twitter.com/lukebp_/status/1147528570581000193) and should launch within a month or so.
 
@@ -57,7 +57,7 @@ Progress was made towards running multiple Politeia instances [concurrently](htt
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
-Work continues to port [upstream changes](https://github.com/decred/dcrlnd/pull/36) from the [lnd](https://github.com/lightningnetwork/lnd) repository. Approximately 190 (of 270) PRs merged into lnd since dcrlnd branched off have now been merged, including many bug fixes and two important features: safe backups for off-chain data and watchtower clients for breach protection and retribution.
+Work continues to port [upstream changes](https://github.com/decred/dcrlnd/pull/36) from the [lnd](https://github.com/lightningnetwork/lnd) repository. Approximately 190 (of 270) of the PRs merged into lnd since dcrlnd branched off have now been incorporated, including many bug fixes and two important features: safe backups for off-chain data and watchtower clients for breach protection and retribution.
 
 In response to a question about BTC-DCR swaps on LN, @matheusd [clarified](https://www.reddit.com/r/decred/comments/c17xxh/is_it_possible_to_exchange_btclightning_for/ere1skv/) the state of multiple elements of the puzzle.
 
@@ -69,9 +69,15 @@ Minor bug fixes and UI improvements, new translations to [Spanish](https://githu
 
 Release of the iOS wallet nears, with [Release Candidate 2](https://www.reddit.com/r/decred/comments/c7ir8d/decred_wallet_for_ios_release_client_2/) of the iOS Wallet is awaiting approval by the Apple App Store. Localization infrastructure and [Russian](https://github.com/raedahgroup/dcrios/pull/470) translation has been added, bugs reported in [Release Candidate 1](https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/) have been fixed and minor UI tweaks have been implemented.
 
-[dcrdata](https://github.com/decred/dcrdata): [Market data](https://explorer.dcrdata.org/market) was added to dcrdata, charts showing aggregated order books and market depth for a selection of exchanges that list Decred.
+[dcrdata](https://github.com/decred/dcrdata): A major release, v5.0 is now live. In addition to architecture, security, and performance improvements, v5.0 introduces a number of new new charts and visualizations for exploring Decred data.
 
-{shall we report v5 final in this issue or push to July?
+A new [market](https://explorer.dcrdata.org/market?chart=depth&xc=aggregated&bin=1h&stack=1) page shows data from several major exchanges, including aggregated DCR price feeds, order book depth, candlestick charts, and more. The [proposals](https://explorer.dcrdata.org/proposals) page is out of beta, and showing stats and voting charts (real-time and historical) for all Politeia proposals.
+
+Architecture improvements include an upgrade to [PostgreSQL](https://github.com/decred/dcrdata/commit/676e2ae2381e900854c2fe664a92d39a122d6ed7) (lite mode has been removed), improved database schema versioning, a [refactoring](https://github.com/decred/dcrdata/commit/856d0466c82338dd1aaec2945ab189da3c4ab060) of the dcrd notification pipeline, experimental support for [CockroachDB](https://github.com/decred/dcrdata/commit/3ddc034e672c84313fae789c558ead139ad39f8a), [block-prefetching](https://github.com/decred/dcrdata/commit/5ceb56b5c8e1ed53b6b92b5deee6e2a05903f61f) by default, and a new pubsub module version with address subscriptions.
+
+Charts should also load faster with performance improvements, including [improved](https://github.com/decred/dcrdata/commit/5eb60c4633d128ab64783b75b851a012ed8024fa) memory management and a new pre-encoded charts caching system
+
+For a full list of changes, see the [Release Notes](https://github.com/decred/dcrdata/releases/tag/release-v5.0.0).
 
 * rc3 is still deployed but there are almost no changes between rc3..release
 * if we do report v5, cover this: https://github.com/decred/dcrdata/releases/tag/release-v5.0.0
@@ -100,7 +106,7 @@ DZ did his first "official" commit to the [dcrandroid](ttps://github.com/decred/
 
 In June the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 15,135 DCR and spent 6,657 DCR. Using June's daily average DCR/USD rate of $28.90, this is $437K received and $192K spent. As these payments were for work completed in May, it is also informative to consider them in the context of the May average daily rate of $27.71 - in which case the USD received/spent figures are $419K/$184K. As of Jul 1, Treasury balance is 622,472 DCR ($18.36 million USD at $29.50).
 
-Below is the proposal status as of Jul 1.
+Below are the status of proposals as of Jul 1.
 
 The following proposals were approved:
 
@@ -116,15 +122,15 @@ There were 2 new proposals published:
 
 * [Supplemental Proposal For Decred Tutorials By Denni Lovejoy](https://proposals.decred.org/proposals/d8d7ff7ad138ed322422aaa4d2a3e1c61f296ae56a2c2316cc5ecd10cf8dd8bd). This proposal asks for the original budget of $750 for tutorial videos to be increased to $7,500. @Denni Lovejoy has asked for the proposal to be abandoned following comments opposing it. There is some ongoing discussion about how to handle these scenarios where work on a proposal goes significantly over budget.
 
-* [Decred Media Campaign Proposal - Crypto Economy - 2019/2020](https://proposals.decred.org/proposals/1a367dcb91b55c60ad5fd038b219201154fcab965edd7a4639f157e409b1f4bf). This proposal requested $33,600 to promote Decred in a number of ways, including banner advertisements , press releases, a Decred giveaway and a newsletter. Comments remarked that some of these are already being well covered and others are not desirable, the proposal was then abandoned by its owner.
+* [Decred Media Campaign Proposal - Crypto Economy - 2019/2020](https://proposals.decred.org/proposals/1a367dcb91b55c60ad5fd038b219201154fcab965edd7a4639f157e409b1f4bf). This proposal requested $33,600 to promote Decred in a number of ways, including banner advertisements , press releases, a Decred giveaway and a newsletter. Comments remarked that some of these are already being well covered and others are not desirable. The proposal was then abandoned by its owner.
 
 This [graph](https://twitter.com/RichardRed0x/status/1139860218010058753) shows Politeia voter participation for the 28 proposals that have finished voting so far.
 
-For a more in depth review of what's been happening on Politeia, check out the [two](https://medium.com/politeia-digest/issue-17-may-28-june-9-bc5bb77e4f6c) [issues](https://medium.com/politeia-digest/issue-18-june-10-june-29-97d140569ad0) of Politeia Digest published in June.
+For a more in-depth review of what's been happening on Politeia, check out the [two](https://medium.com/politeia-digest/issue-17-may-28-june-9-bc5bb77e4f6c) [issues](https://medium.com/politeia-digest/issue-18-june-10-june-29-97d140569ad0) of Politeia Digest published in June.
 
 Following [questions](https://www.reddit.com/r/decred/comments/bx00fu/so_about_the_exmo_exchange/) on Reddit, Exmo posted a short [update](https://twitter.com/Exmo_Com/status/1138020825137930240) and went on to [list](https://exmo.com/en/news_view?id=2776) DCR on Jun 18.
 
-A number of posts on the /r/decred subreddit have sought to poll the Decred community about the [optimal Politeia approval threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/), [renaming Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/), considering whether it should be [called something other than a wallet](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/), and asking whether Decred should start [using DAO instead of DAE](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) to describe the decentralized stakeholder governance of the project.
+A number of posts on the /r/decred subreddit have sought to poll the Decred community about the [optimal Politeia approval threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/), [renaming Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/), [calling Decrediton something other than a wallet](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/), and asking whether Decred should start [using DAO instead of DAE](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) to describe the decentralized stakeholder governance of the project.
 
 The last poll (to rename the DAE to a DAO), can be considered a "soft proposal" by @s\_ben. The rationale behind this proposal being that, while the name DAE (Distributed Autonomous Entity) was originally chosen to avoid association with the Ethereum [DAO hack](https://www.google.com/search?q=ethereum+dao+hack), DAOs have since become a hot topic in crypto, with little association in the popular imagination with the DAO hack. Because Decred arguably has a more legitimate claim on this term than other projects, having already built a functioning DAO (which is producing this newsletter), it makes more sense to be part of the conversation. A Politeia proposal was considered. However there were no objections to the change in various comm channels (as captured in this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px)), and the rough consensus was that, barring any strong opposition, such a change did not require a Politeia proposal. @s\_ben has changed references in the [docs](https://docs.decred.org/governance/politeia/overview/#decentralized-autonomous-organization-dao) and has submitted a [pull request](https://github.com/decred/dcrweb/pull/681) to change the term on decred.org. Discussions and activity around this move are tracked in [this issue](https://github.com/decredcommunity/issues/issues/134).
 
