--- a/journal/201906.md
+++ b/journal/201906.md
@@ -199,8 +199,9 @@ Ditto's June achievements:
 Attended:
 
 * 5 Jun - [Decred x Blueyard](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-tickets-61631192556) - Berlin, Germany. Full report by @Haon is [here](https://github.com/decredcommunity/events/blob/master/reports/20190605-decred-x-blueyard-berlin-germany.md).
-* 11 Jun - Decred and industrial uses for Blockchain - La Paz, Bolivia. @elian gave a talk to 50-60 engineering students of Higher University of San Andrés, and the following day gave a talk on blockchain governance to a local crypto community. ([photos](https://twitter.com/Decred_ES/status/1138899455346954240))
+* 12 Jun - Decred and industrial uses for Blockchain - La Paz, Bolivia. @elian gave a talk to 50-60 engineering students of Higher University of San Andrés ([photos](https://twitter.com/Decred_ES/status/1138899455346954240))
 * 12 Jun - [Decred: A Decentralized Autonomous Entity](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Washington DC, USA.
+* 13 Jun - [CryptoMeeting](https://twitter.com/Decred_ES/status/1138908828370706432) - La Paz, Bolivia. @elian gave a talk on blockchain governance to a local crypto community. ([photos](https://twitter.com/gamelendrez/status/1139325915475959808))
 * 18 Jun - [TF Blockchain](https://www.eventbrite.com/e/tf-blockchain-portland-ep-03-june-18th-2019-tickets-61667348700) - Portland, USA.
 * 18 Jun - [NetEase](https://twitter.com/wanbihou/status/1142243367905943552) - Wuhan, China. @Dominic introduced Decred's unique funding profile and the upcoming DAO. ([photos](https://twitter.com/wanbihou/status/1142243367905943552))
 * 19 Jun - [Reston Virginia Golang meetup](https://www.meetup.com/Golang-Reston/events/sfsjmpyzjbzb/) - Reston, Virginia, USA. @akinsawyerr presented Decred to an audience of 21 Golang developers.
