--- a/journal/201906.md
+++ b/journal/201906.md
@@ -274,34 +274,35 @@ Community stats as of Jul 1:
 * Telegram users: 3,407 (-169)
 * YouTube subscribers: 3,787 (+18)
 * Facebook followers: 3,230 (+11), likes: 2,964 (+10)
-* LinkedIn followers: Decred page 567 (+23)
+* LinkedIn followers: 567 (+23)
 * GitHub dcrd stars: 494 (+5), forks: 1,337 (+13)
 
 Comm systems news:
 
-* Several Matrix rooms were upgraded following the first stable release of Matrix spec. Users have to join new rooms but the process is very straightforward and all history is preserved.
+* Several Matrix rooms were upgraded following the [first stable release](https://matrix.org/blog/2019/06/11/introducing-matrix-1-0-and-the-matrix-org-foundation/) of the Matrix protocol. Users have to join new rooms but the process is very straightforward and all history is preserved.
+* Hot Matrix/Riot features in development pipeline are: editable messages, reactions, threads and better device verification UX for end-to-end encryption.
 
 Selected Reddit posts:
 
 * A [post](https://www.reddit.com/r/decred/comments/c60aho/governance_would_matrixlike_channel_discussions/) asking if Matrix-like channel discussions posted on Reddit would increase adoption & education. 
 * [POLL: optimal Politeia pass threshold](https://www.reddit.com/r/decred/comments/bynidz/poll_optimal_politeia_pass_threshold/) - 57% said current level is OK, 7% said less than 60%, 26% were in favor of increasing the approval threshold.
 * [POLL: Rename Decrediton to Declaration](https://www.reddit.com/r/decred/comments/c4ilpw/poll_rename_decrediton_to_declaration/) - has a score on reddit of 0, which should probably be interpreted as lack of support.
-* [Question: Is a hybrid finance & governance tool called a 'wallet' or something altogether different?](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/)
+* [Question](https://www.reddit.com/r/decred/comments/c52hqd/question_is_a_hybrid_finance_governance_tool/): Is a hybrid finance & governance tool called a 'wallet' or something altogether different?
 * [POLL: Rename DAE to DAO?](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/) - had a score of 15 and top comment says "I support changing it to DAO" with 8 points. See also this [comment](https://www.reddit.com/r/decred/comments/c02geh/poll_rename_dae_to_dao/er1g4px) with notes on support from chat discussion.
 
 Selected Twitter discussions:
 
 More wild not-quite-maximalists were spotted on twitter this month, people who would consider themselves Bitcoiners but who also have a fondness for Decred. Apparently there are more of these closeted Decred fans, who dare not speak out about the cred because it would result in a loss of status in their circle.
 
-* [@Ammarooni](https://twitter.com/Ammarooni/status/1145213941146181632) thread about how "Bitcoin is addressing structural shortcomings of fiat money that aren’t immediately visible to the naked eye, but will become prominent over time. Decred is addressing the shortcomings of Bitcoin that aren’t prevalent today, but may become manifested over time."
-* @Checkmate tweeted a [thread](https://twitter.com/_Checkmatey_/status/1142918632546156544) about Dered as a digital organism driven by a human hive-mind with skin in the game, then went on to [compare](https://twitter.com/_Checkmatey_/status/1145944145141411840) its stock-to-flow with Bitcoin's and finally issue a [challenge](https://twitter.com/_Checkmatey_/status/1145764832362319872) to all Bitcoiners: spend one month studying Decred and come out believing it is not a worthy number 2 to Bitcoin.
-* @CryptoBrekkie created an interesting poll which received 720 responses.
+* @Ammarooni [thread](https://twitter.com/Ammarooni/status/1145213941146181632) about how "Bitcoin is addressing structural shortcomings of fiat money that aren't immediately visible to the naked eye, but will become prominent over time. Decred is addressing the shortcomings of Bitcoin that aren't prevalent today, but may become manifested over time."
+* @\_Checkmatey\_ tweeted a [thread](https://twitter.com/_Checkmatey_/status/1142918632546156544) about Dered as a digital organism driven by a human hive-mind with skin in the game, then went on to [compare](https://twitter.com/_Checkmatey_/status/1145944145141411840) its stock-to-flow with Bitcoin's and finally issue a [challenge](https://twitter.com/_Checkmatey_/status/1145764832362319872) to all Bitcoiners: spend one month studying Decred and come out believing it is not a worthy number 2 to Bitcoin.
+* @CryptoBrekkie created an interesting [poll](https://twitter.com/CryptoBrekkie/status/1145713705415372800) which received 720 responses.
 
-> So I've noticed a trend among some maximalists lately expressing a desire for a real, sound money competitor to Bitcoin, a rival that could ultimately help Bitcoin level up.
-> I've also noticed many maximalists have a soft spot for [@decredproject](https://twitter.com/decredproject).
-> Could Decred be that competitor?
+  > So I've noticed a trend among some maximalists lately expressing a desire for a real, sound money competitor to Bitcoin, a rival that could ultimately help Bitcoin level up.  
+  > I've also noticed many maximalists have a soft spot for [@decredproject](https://twitter.com/decredproject).  
+  > Could Decred be that competitor?
 
-36% said Yes, 52% said No. 
+  36% said Yes, 52% said No. 
 
 ## Markets
 
