Add Events info from akinsawyerr

--- a/journal/201906.md
+++ b/journal/201906.md
@@ -200,11 +200,11 @@ Attended:
 
 * 5 Jun - [Decred x Blueyard](https://www.eventbrite.co.uk/e/decred-x-blueyard-berlin-meetup-tickets-61631192556) - Berlin, Germany. Full report by @Haon is [here](https://github.com/decredcommunity/events/blob/master/reports/20190605-decred-x-blueyard-berlin-germany.md).
 * 12 Jun - Decred and industrial uses for Blockchain - La Paz, Bolivia. @elian gave a talk to 50-60 engineering students of Higher University of San Andrés ([photos](https://twitter.com/Decred_ES/status/1138899455346954240))
-* 12 Jun - [Decred: A Decentralized Autonomous Entity](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Washington DC, USA.
+* 12 Jun - [Decred: A Decentralized Autonomous Entity](https://www.meetup.com/Decred-Washington-DC-Meetup-Group/events/261144707/) - Washington DC, USA. The event had about 11 people in total in attendance. @akinsawyerr gave an overview presentation on Decred and answered questions from the audience. The event was co-hosted by TechSpace Balston and the Dartmouth Entrepreneurial Network of DC. A lot of questions were asked about our governance process, how we pay and manage contractors, and how Decred differed from platforms like Ethereum from a participation/contribution perspective.
 * 13 Jun - [CryptoMeeting](https://twitter.com/Decred_ES/status/1138908828370706432) - La Paz, Bolivia. @elian gave a talk on blockchain governance to a local crypto community. ([photos](https://twitter.com/gamelendrez/status/1139325915475959808))
 * 18 Jun - [TF Blockchain](https://www.eventbrite.com/e/tf-blockchain-portland-ep-03-june-18th-2019-tickets-61667348700) - Portland, USA.
 * 18 Jun - [NetEase](https://twitter.com/wanbihou/status/1142243367905943552) - Wuhan, China. @Dominic introduced Decred's unique funding profile and the upcoming DAO. ([photos](https://twitter.com/wanbihou/status/1142243367905943552))
-* 19 Jun - [Reston Virginia Golang meetup](https://www.meetup.com/Golang-Reston/events/sfsjmpyzjbzb/) - Reston, Virginia, USA. @akinsawyerr presented Decred to an audience of 21 Golang developers.
+* 19 Jun - [Reston Virginia Golang meetup](https://www.meetup.com/Golang-Reston/events/sfsjmpyzjbzb/) - Reston, Virginia, USA. The event had 21 people in attendance, mostly developers. @akinsawyerr gave an overview presentation on Decred and answered questions from the audience. The event was hosted by Comcast. Most of the questions were of a general nature around how to acquire cryptocurrencies, understanding the basic terminology, and the potential economic impact of cryptocurrencies. Post the event a participant asked to know more about what Decred has built leveraging Golang, there is a desire to see actual code demos etc.
 * 19-23 Jun - [Campus Party Brasilia](https://brasil.campus-party.org/) - Brasilia, Brazil. Decred was [well](https://twitter.com/Decred_BR/status/1141782527637688322) [represented](https://twitter.com/Decred_BR/status/1141767693344935941) for another year at Campus Party. @matheusd has written up a [report](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$156172492478087gSMWo:matrix.org) in chat, describing a successful event where Decred had a strong presence and participated in 3 different activities (crypto for kids play time, an LN paywall workshop and participation in a main stage panel).
 * 20 Jun - [Beijing Decred Meetup](https://twitter.com/DecredCN/status/1138739545594220544) - Beijing, China. Decred was represented by @changhugo and @Dominic. The event was attended by 100 people and live streamed to over 4,000 viewers. Full report by @changhugo is [here](https://github.com/decredcommunity/events/blob/master/reports/20190620-first-meetup-beijing-china.md).
 * 26 Jun - [SF Decred Devs x Coinbase Custody Happy Hour](https://www.meetup.com/San-Francisco-Decred-Meetup/events/262420787/) - San Francisco, USA. ([photos](https://twitter.com/CryptoLeslie/status/1144092778017648641))
