--- a/journal/201906.md
+++ b/journal/201906.md
@@ -308,21 +308,23 @@ More wild not-quite-maximalists were spotted on twitter this month, people who w
 
 In June DCR was trading between USD 24.77-37.06 / BTC 0.0026-0.0035. The average daily rate was $28.90.
 
-On June 22nd Bitcoin crossed $10000 and in a matter of days rose up to $13670 in some markets. This caused most alts including Decred to do down in terms of BTC.
+On Jun 22 Bitcoin crossed $10,000 and in a matter of days rose up to $13,670 in some markets. This caused most alts including Decred to do down in terms of BTC.
 
 ## Relevant External
 
-Facebook published the [Libra white paper](https://libra.org/en-US/white-paper/) on Jun 18, and this dominated blockchain news and discussion for a spell more than any other subject has for some time. Quotes from @jy-p were featured in a number of articles about Libra on high profile sites (see Ditto update), questioning Facebook's track record and whether inviting them to also handle our financial transactions is a good idea. We will not revisit the discussion of Libra here, except to note that the white paper addresses how it will be governed - through an association where validators (approved organizations that provide the necessary capital) vote to make decisions. 21 organizations, mostly large multinationals, were [announced](https://www.theblockcrypto.com/2019/06/14/facebooks-cryptocurrency-partners-revealed-we-obtained-the-entire-list-of-inaugural-backers/) with the white paper, with an aim to have 100 signed up before Libra launches. It will be interesting to see how a distributed ledger operated by 100 (mega-)corporations behaves in comparison to the one operated by the Decred stakeholders and their ~40,960 tickets.
+Parity Technologies [released](https://www.parity.io/parity-releases-zebra-in-collaboration-with-zcash-foundation/) an alpha version of Zebra, an alternative Zcash node implementation written in Rust. The [codebase](https://github.com/ZcashFoundation/zebra) has been handed over to the Zcash Foundation. Parity first [announced](https://www.parity.io/parity-teams-up-with-zcash-foundation-for-parity-zcash-client/) plans to build an alternative node in Oct 2018. Zebra was derived from Parity's Rust [Bitcoin implementation](https://github.com/paritytech/parity-bitcoin) and will lay the foundation for a future Polkadot bridge.
+
+Facebook published the [Libra white paper](https://libra.org/en-US/white-paper/) on Jun 18, and this dominated blockchain news and discussion for a spell more than any other subject has for some time. Quotes from @jy-p were featured in a number of articles about Libra on high profile sites (see Ditto update above), questioning Facebook's track record and whether inviting them to also handle our financial transactions is a good idea. We will not revisit the discussion of Libra here, except to note that the white paper addresses how it will be governed - through an association where validators (approved organizations that provide the necessary capital) vote to make decisions. 21 organizations, mostly large multinationals, were [announced](https://www.theblockcrypto.com/2019/06/14/facebooks-cryptocurrency-partners-revealed-we-obtained-the-entire-list-of-inaugural-backers/) with the white paper, with an aim to have 100 signed up before Libra launches. It will be interesting to see how a distributed ledger operated by 100 (mega-)corporations behaves in comparison to the one operated by the Decred stakeholders and their ~40,960 tickets.
 
 Dovey Wan [announced](https://www.coindesk.com/hard-core-fund-collects-50-btc-in-china-to-support-bitcoin-developers) that the 'Hard Code Fund' has accumulated 50 BTC which can be used to pay Bitcoin developers, and described the search for sustainable funding for Bitcoin developers as the biggest challenge facing the ecosystem in 2019. The fund makes payments to approved Bitcoin contributors when they send monthly reports about what they have worked on.
 
 The Bitcoin Cash Development Fund also [announced](https://news.bitcoin.com/bitcoin-cash-development-fund-receives-massive-support/) good progress on a development funding drive, with 760 BCH of a targeted 800 BCH raised from 900 donors.
 
-Grin is attempting to [iterate](https://www.grin-forum.org/t/proposal-grin-governance-iteration/5191) towards a less centralized form of governance, after recognizing that the absence of formal governance processes plus the need for trusted contributors to manage shared resources (donated funds) has led to a de facto centralization of responsibility for the project. The grin council is to become the core team. A Request for Comment process is being introduced through which feedback is sought on proposed development work. Sub-teams will organize independently with their own leaders.
+Grin is attempting to [iterate](https://www.grin-forum.org/t/proposal-grin-governance-iteration/5191) towards a less centralized form of governance, after recognizing that the absence of formal governance processes plus the need for trusted contributors to manage shared resources (donated funds) has led to a de facto centralization of responsibility for the project. The Grin council is to become the core team. A Request for Comment process is being introduced through which feedback is sought on proposed development work. Sub-teams will organize independently with their own leaders.
 
-Zcash continues to move towards a method of funding development long-term through a portion of the block reward, likely 10%. Zooko (CEO of Electronic Coin Company) has [stated](https://finance.yahoo.com/news/zooko-wilcox-gives-zcash-community-154140125.html) that the ECC needs 12 months of runway to function and if no continuation of funding for ECC is established one year before the founder's reward, then ECC will have to consider pivoting to other projects which can generate revenue. Zooko has also expressed the opinion that the ECC should not take the lead on deciding how this funding mechanism should work, and that it should be more decentralized than the current setup. Zooko has been [looking](https://twitter.com/zooko/status/1137494548148416512) at Decred's governance as part of this process. 
+Zcash continues to move towards a method of funding development long-term through a portion of the block reward, likely 10%. Zooko (CEO of Electric Coin Company) has [stated](https://finance.yahoo.com/news/zooko-wilcox-gives-zcash-community-154140125.html) that the ECC needs 12 months of runway to function and if no continuation of funding for ECC is established one year before the founder's reward, then ECC will have to consider pivoting to other projects which can generate revenue. Zooko has also expressed the opinion that the ECC should not take the lead on deciding how this funding mechanism should work, and that it should be more decentralized than the current setup. Zooko has been [looking](https://twitter.com/zooko/status/1137494548148416512) at Decred's governance as part of this process: "In a voting system with lots of cold coins, like Zcash, I would expect a good turnout to be around 1%.".
 
-Monero Community Crowdfunding System is [funding](https://ccs.getmonero.org/proposals/RandomX-audit.html) 3 audits of the new PoW algorithm, following a [process](https://www.reddit.com/r/Monero/comments/bozr0z/randomx_auditor_selection/) in which 20 participants in the #monero-dev IRC channel voted to prioritize the audits. A CCS proposal was created which covers all 3 audits (costing $18k, $47k and $53k respectively), with audits being greenlit as enough funds became available to pay for the preferred audits.
+Monero Community Crowdfunding System is [funding](https://ccs.getmonero.org/proposals/RandomX-audit.html) 3 audits of the new PoW algorithm, following a [process](https://www.reddit.com/r/Monero/comments/bozr0z/randomx_auditor_selection/) in which 20 participants in the #monero-dev IRC channel voted to prioritize the audits. A CCS proposal was created which covers all 3 audits (costing $18K, $47K and $53K respectively), with audits being greenlit as enough funds became available to pay for the preferred audits.
 
 Aragon Black [published](https://blog.aragon.black/aragon-fundraising-the-return-of-the-commons/) an article about Aragon Fundraising, which will be coming to mainnet in a few months. This is a platform for conducting Decentralized Autonomous Initial Coin Offerings (DAICOs, a concept initially [described](https://ethresear.ch/t/explanation-of-daicos/465) by Vitalik Buterin). Individuals who invest in a DAICO will receive tokens which grant them voting rights and some degree of ownership of the DAO's assets (which may come to include tokenized rights to intellectual property).
 
@@ -332,9 +334,11 @@ Arthur Breitman, Tezos founder, published a [blog](https://medium.com/@arthurb/p
 
 There has been some friction between the developer groups working on Tezos software. The OCamlPro team introduced a proposal to fix a security issue and reward themselves from inflation funding - at a time when the other developer teams had agreed to wait and inject a proposal at a later time. OCamlPro's 'early' [submission](https://www.reddit.com/r/tezos/comments/by5xy8/proposal_for_amendment_brest_a/) means that the bakers will likely vote it down and thus it will take longer before the "real" proposal is submitted. OCamlPro [appeared](https://www.reddit.com/r/tezos/comments/byqc9i/ocamlpro_what_is_the_real_motivation_behind/) to be feeling frozen out by the other teams, having submitted a bug report and failed to receive acknowledgment. Subsequently, Tezos commons published an [article](https://medium.com/tezoscommons/a-cautionary-tale-ocamlpro-65d692af09f8) which purportedly uncovers details of a plan by OCamlPro to fork the Tezos chain and capture part of the Tezos community and market capitalization - and speculates that the OCamlPro team are acting to destabilize the Tezos community ahead of this move.
 
-An anonymous user claiming to be a current or former employee of Chainalysis participated in an AMA on /r/Bitcoin, subsequently deleted but archived [here](https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/) (thanks [@fiach_dubh](https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/eryukx6)). The answers suggested that Bitcoin privacy techniques like coinjoin and wasabi wallet, and all of the coins with privacy features, were hated by Chainalysis, and did not see a bright future for blockchain forensic analysis.
+An anonymous user claiming to be a current or former employee of Chainalysis participated in an AMA on /r/Bitcoin, subsequently deleted but archived [here](https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/) (thanks [u/Fiach_Dubh](https://www.reddit.com/r/Bitcoin/comments/c4so58/i_am_a_current_or_former_employee_of_chainalysis/eryukx6)). The answers suggested that Bitcoin privacy techniques like CoinJoin and Wasabi wallet, and all of the coins with privacy features, were hated by Chainalysis, and did not see a bright future for blockchain forensic analysis.
 
-FATF has [finalized](https://www.coindesk.com/fatf-crypto-travel-rule) its recommendation for handling crypto. Per the new standards, businesses like exchanges and wallet providers must obtain and store information to identify both sender and recipient, and exchange this information with each other. Member countries have 12 months to adopt the guidelines which will be reviewed in June 2020. The recommendations are not binding but non-complying countries risk being put on a blacklist.
+{block withholding attack claim https://bitkan.com/en/news/topic/217913 (archived https://archive.today/JpDje ) - not possible in Decred. Clarify: is the claim true?}
+
+FATF has [finalized](https://www.coindesk.com/fatf-crypto-travel-rule) its recommendation for handling crypto. Per the new standards, businesses like exchanges and wallet providers must obtain and store information to identify both sender and recipient, and exchange this information with each other like banks do (the 'travel route'). Member countries have 12 months to adopt the guidelines which will be reviewed in June 2020. The recommendations are not binding but non-complying countries risk being put on a blacklist.
 
 Some experts [warned](https://www.coindesk.com/beyond-kyc-global-regulators-appear-set-to-adopt-tough-new-rules-for-crypto-exchanges) FATF that the new standard "could have the unintended consequence of 'encouraging P2P transfers via non-custodial wallets...'" (which sounds strikingly familiar to the intended way of using crypto). Another quote from [CoinDesk](https://www.coindesk.com/regulators-begin-to-debate-cryptocurrency-legislation-ahead-of-g20-summit) on this possible dynamic: "a common concern is that new regulations could push the public out of controlled platforms".
 
@@ -355,13 +359,6 @@ Ad blocking browser extensions like uBlock are about to get hit by new Google Ch
 The rate of SIM swapping attacks is [increasing](https://www.tonysheng.com/sim-swap), [educate yourself](https://medium.com/mycrypto/what-to-do-when-sim-swapping-happens-to-you-1367f296ef4d) and do what's necessary to protect your accounts.
 
 Who would have thought that a 27-year old _text editor_ can still have an arbitrary code execution [vulnerability](https://www.theregister.co.uk/2019/06/12/vim_remote_command_execution_flaw/)? This is a reminder that correctness is hard and why it takes so much work to build and test robust software.
-
-
-
-
-https://twitter.com/LuxorTechTeam/status/1141816750104821770 {linked to article does not load for me}
-
-
 
 ## About This Issue
 
