--- a/journal/201906.md
+++ b/journal/201906.md
@@ -4,46 +4,43 @@
 
 {introduction, major news of the month ordered by impact}
 
+- Dcrdata v5.0 released. New charts and data visualizations for exploring Decred data, improvements in performance, security and architecture. 
+
+- Smoother experience for contractors submitting invoices with bug fixes and UI improvements in the Contractor Management System (CMS)&mdash;an important milestone in rolling out the DCC and financial reporting.
+
+- Budgets approved on Politeia for Ditto (PR), the bug bounty program, open source research, development work related to decentralizing the treasury and approved consensus rule changes.
+
+In addition to architecture, security, and performance improvements, v5.0 introduces a number of new new charts and visualizations for exploring Decred data.
+
 ## Development
 
-[dcrd](https://github.com/decred/dcrd): 
+[dcrd](https://github.com/decred/dcrd): Bug fixes, more test coverage and code maintenance. 
 
-* [Introduced](https://github.com/decred/dcrd/pull/1767) v2 of the `dcrutil` module to reduce coupling and prevent subtle bugs in handling addresses.
-* Large codebase upgrade to introduce v2 of `chaincfg` module [completed](https://github.com/decred/dcrd/pull/1698). Among some issues it addressed are: reduce the surface of the critical consensus code by defining block 1 payouts as scripts instead of addresses, remove undesired side effects upon importing the package, and improve organization of network parameters. Subsequent commits carefully upgraded depending modules to use the new version - this is a challenge of performing a large scale change on a repository that must build and pass all tests on each and every commit, and each commit must be maximally reviewable.
-* [Introduced](https://github.com/decred/dcrd/pull/1774) v2 of the `txscript` module to use new versions of `chaincfg` and `dcrutil` modules. Opportunity of the version bump was taken to also address several issues in the v1.
-* Overhaul of the background template generator covered in [May issue](201905.md) was [merged](https://github.com/decred/dcrd/pull/1748).
-* Added [support](https://github.com/decred/dcrd/pull/1757) for generation of Ed25519 TLS certificates on Go 1.13
-* Lots of smaller codebase and test improvements.
+Several modules added or upgraded to add test coverage and improve code maintainability. Version 2 of the `dcrutil` module  [introduced](https://github.com/decred/dcrd/pull/1767) to reduce coupling and prevent subtle bugs in handling addresses. A large codebase upgrade to introduce v2 of `chaincfg` module [completed](https://github.com/decred/dcrd/pull/1698). Benefits from this include: reducing the surface of the critical consensus code by defining block 1 payouts as scripts instead of addresses, removing undesired side effects upon importing the package and improving organization of network parameters. Subsequent commits carefully upgraded depending modules to use the new version, a considerable effort involving large-scale changes to the repository, many fixes to the build and ensuring each commit is maximally reviewable. Version 2 of the `txscript` module also [introduced](https://github.com/decred/dcrd/pull/1774) to use new versions of `chaincfg` and `dcrutil` modules. Opportunity of the version bump was taken to also address several issues in the v1.
+
+Among many other smaller codebase and test improvements, support was [added](https://github.com/decred/dcrd/pull/1757) for generation of Ed25519 TLS certificates on Go 1.13. 
+
+Overhaul of the background template generator covered in [May issue](201905.md) was [merged](https://github.com/decred/dcrd/pull/1748).
 
 {in progress stuff?}
 
 {any big picture notes}
 
-[dcrwallet](https://github.com/decred/dcrwallet):
+[dcrwallet](https://github.com/decred/dcrwallet): Bus fixes, security enhancements, and privacy enhancement for VSPs.
 
-* Changed default [TLS curve](https://github.com/decred/dcrwallet/pull/1468) to a more secure P-256.
-* Added support and enabled [Ed25519](https://github.com/decred/dcrwallet/pull/1477) TLS certificates by default on Go 1.13.
-* Added [`ticketbuyer.limit`](https://github.com/decred/dcrwallet/pull/1476) flag to limit max tickets bought per block.
-* Added [notifications](https://github.com/decred/dcrwallet/pull/1465) for processed transactions and blocks in SPV mode. {is it noteworthy or internal fix?}
-* Added new [wallet address APIs](https://github.com/decred/dcrwallet/pull/1474) to simplify development of address-related features.
-* Improved `lockedbytickets` [balance calculation](https://github.com/decred/dcrwallet/pull/1330) to address several issues for solo, VSP and split ticket voters.
-* [RPC fix](https://github.com/decred/dcrwallet/pull/1478) to allow VSPs to show [immature tickets](https://github.com/decred/dcrstakepool/pull/404).
-* Bug fixes and code maintenance.
+Security improved by cryptography upgrades and privacy feature for VSPs. Default [TLS curve](https://github.com/decred/dcrwallet/pull/1468) changed to a more secure P-256. Support added and enabled for [Ed25519](https://github.com/decred/dcrwallet/pull/1477) TLS certificates by default on Go 1.13. Work is [in progress](https://github.com/decred/dcrwallet/pull/1471) to allow arbitrary xpub account imports. This feature will improve privacy for VSPs by allowing the automatic ticket buyer to derive unique voting addresses, avoiding address reuse.
+
+Ticket handling improved by addition of [`ticketbuyer.limit`](https://github.com/decred/dcrwallet/pull/1476) flag to limit max tickets bought per block and improved `lockedbytickets` [balance calculation](https://github.com/decred/dcrwallet/pull/1330) to address several issues for solo, VSP and split ticket voters. [RPC fix](https://github.com/decred/dcrwallet/pull/1478) to allow VSPs to show [immature tickets](https://github.com/decred/dcrstakepool/pull/404). 
+
+In addition to minor bug fixes and code maintenance, new features added: [wallet address APIs](https://github.com/decred/dcrwallet/pull/1474) to simplify development of address-related features, and new [notifications](https://github.com/decred/dcrwallet/pull/1465) for processed transactions and blocks in SPV mode. {is it noteworthy or internal fix?}
 
 Work is [in progress](https://github.com/decred/dcrwallet/pull/1471) to allow arbitrary xpub account imports. This feature will allow the automatic ticket buyer to derive unique voting addresses, avoiding address reuse.
 
 {any big picture notes for dcrwallet? where is it going?}
 
-[Decrediton](https://github.com/decred/decrediton): 
+[Decrediton](https://github.com/decred/decrediton): Work on [LN wallet](https://github.com/decred/decrediton/pull/2107) integration continues. Internal improvements of handling [configuration](https://github.com/decred/decrediton/pull/2129), bug fixes and maintenance.
 
-* Internal improvements of handling [configuration](https://github.com/decred/decrediton/pull/2129). {any more to say here?}
-* Automatically [reduce sidebar](https://github.com/decred/decrediton/pull/2127) on small screens.
-* Bug fixes and maintenance.
-
-In progress:
-
-* [LN wallet](https://github.com/decred/decrediton/pull/2107) integration. {is there any more we can say here? Expected release date (roughly)? Will this trigger another version bump (1.5.0?)}
-* PoC to use a finite [state machine](https://github.com/decred/decrediton/pull/2130) to better manage complexity and improve correctness during startup.
+PoC underway to use a finite [state machine](https://github.com/decred/decrediton/pull/2130) to better manage complexity and improve correctness during startup.
 
 [Politeia](https://github.com/decred/politeia): A [plugin](https://github.com/decred/politeia/pull/929) structure has been added to the Politeia user database that makes building generic applications on top of Politeia’s web server (politeiawww) easier. This will allow applications to more easily store application-specific user data (such as data from the Contractor Management System (CMS)), while still re-using the main user routes. A generic dcrdata websocket [implementation](https://github.com/decred/politeia/pull/933) has also been created, making it easier for applications building on politeiawww to monitor addresses balances and other blockchain data. 
 
@@ -75,7 +72,7 @@ A new [market](https://explorer.dcrdata.org/market?chart=depth&xc=aggregated&bin
 
 Architecture improvements include an upgrade to [PostgreSQL](https://github.com/decred/dcrdata/commit/676e2ae2381e900854c2fe664a92d39a122d6ed7) (lite mode has been removed), improved database schema versioning, a [refactoring](https://github.com/decred/dcrdata/commit/856d0466c82338dd1aaec2945ab189da3c4ab060) of the dcrd notification pipeline, experimental support for [CockroachDB](https://github.com/decred/dcrdata/commit/3ddc034e672c84313fae789c558ead139ad39f8a), [block-prefetching](https://github.com/decred/dcrdata/commit/5ceb56b5c8e1ed53b6b92b5deee6e2a05903f61f) by default, and a new pubsub module version with address subscriptions.
 
-Charts should also load faster with performance improvements, including [improved](https://github.com/decred/dcrdata/commit/5eb60c4633d128ab64783b75b851a012ed8024fa) memory management and a new pre-encoded charts caching system
+Charts should also load faster with performance improvements, including [improved](https://github.com/decred/dcrdata/commit/5eb60c4633d128ab64783b75b851a012ed8024fa) memory management and a new pre-encoded charts caching system.
 
 For a full list of changes, see the [Release Notes](https://github.com/decred/dcrdata/releases/tag/release-v5.0.0).
 
