--- a/journal/201906.md
+++ b/journal/201906.md
@@ -4,44 +4,41 @@
 
 {introduction, major news of the month ordered by impact}
 
-- Dcrdata v5.0 released. New charts and data visualizations for exploring Decred data, improvements in performance, security and architecture. 
+* Budgets approved on Politeia for Ditto (PR), the bug bounty program, open source research, decentralized exchange specification and block header commitments consensus change that will boost SPV security and pave the way for other improvements.
 
-- Smoother experience for contractors submitting invoices with bug fixes and UI improvements in the Contractor Management System (CMS)&mdash;an important milestone in rolling out the DCC and financial reporting.
+* dcrdata v5.0 released. New charts and data visualizations for exploring Decred data, improvements in performance, security and architecture. 
 
-- Budgets approved on Politeia for Ditto (PR), the bug bounty program, open source research, development work related to decentralizing the treasury and related consensus rule changes.
+* Smoother experience for contractors submitting invoices with bug fixes and UI improvements in the Contractor Management System (CMS) - an important milestone in rolling out the DCC and financial reporting.
 
+* {(social) media activity?}
 
 ## Development
 
-[dcrd](https://github.com/decred/dcrd): Bug fixes, more test coverage and code maintenance. 
+[dcrd](https://github.com/decred/dcrd): Code maintenance and more test coverage.
 
-Several modules added or upgraded to add test coverage and improve code maintainability. Version 2 of the `dcrutil` module  [introduced](https://github.com/decred/dcrd/pull/1767) to reduce coupling and prevent subtle bugs in handling addresses. A large codebase upgrade to introduce v2 of `chaincfg` module [completed](https://github.com/decred/dcrd/pull/1698). Benefits from this include: reducing the surface of the critical consensus code by defining block 1 payouts as scripts instead of addresses, removing undesired side effects upon importing the package and improving organization of network parameters. Subsequent commits carefully upgraded depending modules to use the new version, a considerable effort involving large-scale changes to the repository, many fixes to the build and ensuring each commit is maximally reviewable. Version 2 of the `txscript` module also [introduced](https://github.com/decred/dcrd/pull/1774) to use new versions of `chaincfg` and `dcrutil` modules. Opportunity of the version bump was taken to also address several issues in the v1.
-
-Among other smaller codebase and test improvements, support was [added](https://github.com/decred/dcrd/pull/1757) for generation of Ed25519 TLS certificates on Go 1.13. 
+Several modules upgraded to improve organization, readability and prevent subtle bugs. Version 2 of the `dcrutil` module [introduced](https://github.com/decred/dcrd/pull/1767) to reduce coupling and prevent subtle bugs in handling addresses. A large codebase upgrade to introduce v2 of `chaincfg` module [completed](https://github.com/decred/dcrd/pull/1698). Benefits from this include: reducing the surface of the critical consensus code by defining block 1 payouts as scripts instead of addresses, removing undesired side effects upon importing the package and improving organization of network parameters. Version 2 of the `txscript` module also [introduced](https://github.com/decred/dcrd/pull/1774) to use new versions of `chaincfg` and `dcrutil` modules. Opportunity of the version bump was taken to also address several issues in the v1.
 
 Overhaul of the background template generator covered in [May issue](201905.md) was [merged](https://github.com/decred/dcrd/pull/1748).
 
-{in progress stuff?}
+These large code upgrades are done very carefully. First a new module version is introduced, then depending modules are gradually updated to use the new version. At all times, everything must build and pass all tests, and each commit must be maximally reviewable.
 
-{any big picture notes}
+Among other smaller improvements, support was [added](https://github.com/decred/dcrd/pull/1757) for generation of Ed25519 TLS certificates on Go 1.13. 
 
-[dcrwallet](https://github.com/decred/dcrwallet): Bug fixes, security improvements, new privacy feature.
+[dcrwallet](https://github.com/decred/dcrwallet): Bug fixes and incremental improvements.
 
-Security improved with cryptographic upgrades and a new privacy feature for VSPs. Default [TLS curve](https://github.com/decred/dcrwallet/pull/1468) changed to a more secure P-256. Support added and enabled for [Ed25519](https://github.com/decred/dcrwallet/pull/1477) TLS certificates by default on Go 1.13. Work is [in progress](https://github.com/decred/dcrwallet/pull/1471) to allow arbitrary xpub account imports. This feature will improve privacy for VSPs by allowing the automatic ticket buyer to derive unique voting addresses, avoiding address reuse.
+Default [TLS curve](https://github.com/decred/dcrwallet/pull/1468) changed to a more secure P-256. Support added and enabled for [Ed25519](https://github.com/decred/dcrwallet/pull/1477) TLS certificates by default on Go 1.13.
 
-Ticket handling improved by addition of [`ticketbuyer.limit`](https://github.com/decred/dcrwallet/pull/1476) flag to limit max tickets bought per block and improved `lockedbytickets` [balance calculation](https://github.com/decred/dcrwallet/pull/1330) to address several issues for solo, VSP and split ticket voters. [RPC fix](https://github.com/decred/dcrwallet/pull/1478) to allow VSPs to show [immature tickets](https://github.com/decred/dcrstakepool/pull/404). 
+Ticket handling improved by addition of [`ticketbuyer.limit`](https://github.com/decred/dcrwallet/pull/1476) flag to limit max tickets bought per block and corrected `lockedbytickets` [balance calculation](https://github.com/decred/dcrwallet/pull/1330) to address several issues for solo, VSP and split ticket voters. An [RPC fix](https://github.com/decred/dcrwallet/pull/1478) will allow VSPs to show [immature tickets](https://github.com/decred/dcrstakepool/pull/404) separately. Several new [wallet address APIs](https://github.com/decred/dcrwallet/pull/1474) added to simplify development of address-related features.
 
-New features added include [wallet address APIs](https://github.com/decred/dcrwallet/pull/1474) to simplify development of address-related features, and new [notifications](https://github.com/decred/dcrwallet/pull/1465) for processed transactions and blocks in SPV mode. {is it noteworthy or internal fix?}
-
-{any big picture notes for dcrwallet? where is it going?}
+Work is [in progress](https://github.com/decred/dcrwallet/pull/1471) to allow arbitrary xpub account imports. This feature will improve privacy by allowing the automatic ticket buyer to derive unique voting addresses, avoiding address reuse.
 
 [Decrediton](https://github.com/decred/decrediton): Work on [LN wallet](https://github.com/decred/decrediton/pull/2107) integration continues. Internal improvements of handling [configuration](https://github.com/decred/decrediton/pull/2129), bug fixes and maintenance.
 
 PoC underway to use a finite [state machine](https://github.com/decred/decrediton/pull/2130) to better manage complexity and improve correctness during startup.
 
-[Politeia](https://github.com/decred/politeia): A [plugin](https://github.com/decred/politeia/pull/929) structure has been added to the Politeia user database that makes building generic applications on top of Politeia’s web server (politeiawww) easier. This will allow applications to more easily store application-specific user data (such as data from the Contractor Management System (CMS)), while still re-using the main user routes. A generic dcrdata websocket [implementation](https://github.com/decred/politeia/pull/933) has also been created, making it easier for applications building on politeiawww to monitor addresses balances and other blockchain data. 
+[Politeia](https://github.com/decred/politeia): A [plugin](https://github.com/decred/politeia/pull/929) structure has been added to the Politeia user database that makes building generic applications on top of Politeia's web server (politeiawww) easier. This will allow applications to more easily store application-specific user data (such as data from the Contractor Management System (CMS)), while still re-using the main user routes. A generic dcrdata websocket [implementation](https://github.com/decred/politeia/pull/933) has also been created, making it easier for applications building on politeiawww to monitor addresses balances and other blockchain data. 
 
-A number of incremental improvements and bug fixes related to the CMS, an application running politeiawww that reuses much of Politeia’s frontend. The CMS has been in production processing contractor invoices since early May. Friction in the process of submitting invoices has been significantly reduced. 
+A number of incremental improvements and bug fixes related to the CMS, an application running politeiawww that reuses much of Politeia's frontend. Friction in the process of submitting invoices has been significantly reduced. The CMS has been in production processing contractor invoices since early May. 
 
 A full Politeia redesign to clean up the UI and make it consistent with Decred branding is [underway](https://twitter.com/lukebp_/status/1147528570581000193) and should launch within a month or so.
 
@@ -51,19 +48,13 @@ Progress was made towards running multiple Politeia instances [concurrently](htt
 
 [dcrstakepool](https://github.com/decred/dcrstakepool): VSP software is getting more love in the recent months. Following the [redesign](https://github.com/decred/dcrstakepool/pull/339) in May, there was a lot of refactoring work to achieve proper [layer separation](https://github.com/decred/dcrstakepool/issues/227) between the components that will also have a small bonus on security and performance.
 
-[dcrlnd](https://github.com/decred/dcrlnd):
-
-Work continues to port [upstream changes](https://github.com/decred/dcrlnd/pull/36) from the [lnd](https://github.com/lightningnetwork/lnd) repository. Approximately 190 (of 270) of the PRs merged into lnd since dcrlnd branched off have now been incorporated, including many bug fixes and two important features: safe backups for off-chain data and watchtower clients for breach protection and retribution.
+[dcrlnd](https://github.com/decred/dcrlnd): Work continues to port [upstream changes](https://github.com/decred/dcrlnd/pull/36) from the [lnd](https://github.com/lightningnetwork/lnd) repository. Approximately 190 (of 270) of the PRs merged into lnd since dcrlnd branched off have now been incorporated, including many bug fixes and two important features: safe backups for off-chain data and watchtower clients for breach protection and retribution.
 
 In response to a question about BTC-DCR swaps on LN, @matheusd [clarified](https://www.reddit.com/r/decred/comments/c17xxh/is_it_possible_to_exchange_btclightning_for/ere1skv/) the state of multiple elements of the puzzle.
 
-[dcrandroid](https://github.com/decred/dcrandroid): 
+[dcrandroid](https://github.com/decred/dcrandroid): Minor bug fixes and UI improvements, new translations to [Spanish](https://github.com/decred/dcrandroid/pull/363) and [Portuguese (BR)](https://github.com/decred/dcrandroid/pull/367), and a new send and estimation [function](https://github.com/decred/dcrandroid/pull/371).
 
-Minor bug fixes and UI improvements, new translations to [Spanish](https://github.com/decred/dcrandroid/pull/363), [Portuguese (BR)](https://github.com/decred/dcrandroid/pull/367), and a new send and estimation [function](https://github.com/decred/dcrandroid/pull/371) {please clarify what is exactly estimated?}.
-
-[dcrios](https://github.com/raedahgroup/dcrios):
-
-Release of the iOS wallet nears, with [Release Candidate 2](https://www.reddit.com/r/decred/comments/c7ir8d/decred_wallet_for_ios_release_client_2/) of the iOS Wallet is awaiting approval by the Apple App Store. Localization infrastructure and [Russian](https://github.com/raedahgroup/dcrios/pull/470) translation has been added, bugs reported in [Release Candidate 1](https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/) have been fixed and minor UI tweaks have been implemented.
+[dcrios](https://github.com/raedahgroup/dcrios): Release of the iOS wallet nears, with [Release Candidate 2](https://www.reddit.com/r/decred/comments/c7ir8d/decred_wallet_for_ios_release_client_2/) of the iOS Wallet awaiting approval by the Apple App Store. Localization infrastructure and [Russian](https://github.com/raedahgroup/dcrios/pull/470) translation has been added, bugs reported in [Release Candidate 1](https://www.reddit.com/r/decred/comments/bxje6l/decred_wallet_for_ios_release_client_1/) have been fixed and minor UI tweaks have been implemented.
 
 [dcrdata](https://github.com/decred/dcrdata): A major release, v5.0 is now live. In addition to architecture, security, and performance improvements, v5.0 introduces a number of new new charts and visualizations for exploring Decred data.
 
@@ -75,13 +66,7 @@ Charts should also load faster with performance improvements, including [improve
 
 For a full list of changes, see the [Release Notes](https://github.com/decred/dcrdata/releases/tag/release-v5.0.0).
 
-* rc3 is still deployed but there are almost no changes between rc3..release
-* if we do report v5, cover this: https://github.com/decred/dcrdata/releases/tag/release-v5.0.0
-}
-
-[docs](https://github.com/decred/dcrdocs):
-
-Instances of DAE (Distributed Autonomous Entity) were [replaced](https://github.com/decred/dcrdocs/pull/958) with DAO (Distributed Autonomous Organization). A new page adds details how the [algorithm](https://github.com/decred/dcrdocs/pull/963) used to pseudorandomly select tickets for voting works {SB: merged but not yet deployed}. 
+[docs](https://github.com/decred/dcrdocs): Instances of "DAE" (Distributed Autonomous Entity) were [replaced](https://github.com/decred/dcrdocs/pull/958) with "DAO" (Distributed Autonomous Organization). A new page adds details how the [algorithm](https://github.com/decred/dcrdocs/pull/963) used to pseudorandomly select tickets for voting works. 
 
 Other:
 
